--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
             <script src="js/html5shiv.js"></script>
         <![endif]-->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    
+    <meta name="description" content="개인적으로 제작한 삼양맛샵 클론 코딩입니다."/>
+    <meta name="keywords" content="HTML, CSS, JavaScript, 삼양맛샵, clone, 클론코딩, Ju Kyeong Park, 박주경, 포트폴리오, 웹퍼블리셔, web publisher, 퍼블리셔, Publisher, 프론트앤드, Frontend, jquery" />
+    <meta name="author" content="JuKyeong Park" />
+    <meta property="og:type" content="website">
+    <meta name="og:site_name" content="삼양맛샵" />
+    <meta property="og:title" content="삼양맛샵">
+    <meta name="og:description" content="개인적으로 제작한 삼양맛샵 클론 코딩입니다."/>
+    <meta property="og:image" content="https://jk92lania.github.io/sydeliciousshop/images/mh_logo.png" />
+    <meta property="og:url" content=" https://jk92lania.github.io/sydeliciousshop/" />
+    
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>삼양맛샵</title>
     <script src="js/prefixfree.min.js"></script>
 
